<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.JobFragment">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:rowCount="6"
        android:columnCount="2">

        <Button
            android:id="@+id/hdfc"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/job_option_1"/>
        <Button
            android:id="@+id/axis"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/job_option_2"/>
        <Button
            android:id="@+id/icici"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/job_option_3"/>
        <Button
            android:id="@+id/passport"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/job_option_4"/>
        <Button
            android:id="@+id/semiGovt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/job_option_5"/>
        <Button
            android:id="@+id/mahindra"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/job_option_6"/>
        <Button
            android:id="@+id/reception"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/job_option_7"/>
        <Button
            android:id="@+id/marketing"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/job_option_8"/>
        <Button
            android:id="@+id/shop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/job_option_9"/>
        <Button
            android:id="@+id/bpo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/job_option_10"/>
        <Button
            android:id="@+id/immigration"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/job_option_11"/>
        <Button
            android:id="@+id/pharma"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/job_option_12"/>

    </GridLayout>

</FrameLayout>