<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DashboardFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/pincode_container"
        layout="@layout/delivery"/>
    <ImageButton
        android:id="@+id/grocery1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/pssg1"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <include
            android:id="@+id/layput_toolbar1"
            app:layout_constraintBottom_toBottomOf="parent"
            layout="@layout/appbar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white">
                <include
                    android:id="@+id/layput_toolbar"
                    layout="@layout/toolbar"/>
            </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:rowCount="4"
        android:columnCount="2"
        android:visibility="invisible"

        android:layout_below="@+id/appBarLayout">

        <Button
            android:id="@+id/grocery"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/grocery_service_1"/>
        <Button
            android:visibility="visible"
            android:id="@+id/job"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/job_service_2"/>
        <Button
            android:visibility="visible"
            android:id="@+id/medicine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/medicine_service_3"/>
        <Button
            android:visibility="visible"
            android:id="@+id/education"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/education_service_4"/>
        <Button
            android:visibility="visible"
            android:id="@+id/consultant"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/consultant_service_5"/>
        <Button
            android:visibility="visible"
            android:id="@+id/startup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="16sp"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:text="@string/startup_service_6"/>
    </GridLayout>
</FrameLayout>