<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/container_deliver_layer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_40px"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/label_delivery_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_pin_code"
            android:paddingStart="@dimen/_10px"
            android:paddingEnd="@dimen/_10px"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <Spinner
            android:id="@+id/spinner_pin_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/label_delivery_code"
            app:layout_constraintTop_toTopOf="@id/label_delivery_code"
            app:layout_constraintBottom_toBottomOf="@+id/label_delivery_code"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:padding="@dimen/_10px"
        android:textColor="@color/quantum_yellow"
        app:layout_constraintTop_toBottomOf="@+id/container_deliver_layer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView_search"
        android:layout_width="match_parent"
        android:padding="@dimen/_10px"
        android:layout_margin="@dimen/_10px"
        android:background="@drawable/round_cornor"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ic_baseline_search_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/search_for_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time"/>
</androidx.constraintlayout.widget.ConstraintLayout>